--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital@0;1&family=Tangerine&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
